--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@firebase/storage": "^0.11.2",
+    "@react-native-firebase/auth": "^18.1.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.10",
@@ -26,6 +27,7 @@
     "react-native-bootstrap-icons": "^1.5.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "~2.14.4",
+    "react-native-recaptcha-v3": "^0.0.16",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10"
