--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@firebase/storage": "^0.11.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-native-firebase/auth": "^18.1.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -25,6 +28,7 @@
     "react-final-form": "^6.5.9",
     "react-native": "0.71.6",
     "react-native-bootstrap-icons": "^1.5.0",
+    "react-native-fontawesome": "^7.0.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-recaptcha-v3": "^0.0.16",
