--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-recaptcha-v3": "^0.0.16",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-viewport-units": "^0.0.5",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
