--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-recaptcha-v3": "^0.0.16",
     "react-native-screens": "^3.20.0",
+    "react-native-sound": "^0.11.2",
+    "react-native-sound-player": "^0.13.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-viewport-units": "^0.0.5",
     "react-native-web": "~0.18.10"
